--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -6,4 +6,56 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-card>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="9">
+          <ion-card-header>
+              <ion-row>
+                <ion-col size="1">
+                  <ion-avatar class="tamanho">
+                    <img src="../../assets/rodsena.jpg">
+                  </ion-avatar>
+                </ion-col>
+                <ion-col></ion-col>
+              </ion-row>
+            <ion-card-title>Rodrigo Sena</ion-card-title>
+            <ion-card-subtitle>Perfil Novato</ion-card-subtitle>
+            <ion-icon name="star-half"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+          </ion-card-header>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-card-content>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-icon name="notifications" color="primary"></ion-icon>
+            <ion-label>Notificações</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="cash" color="primary"></ion-icon>
+            <ion-label>Formas de pagamento</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="heart" color="primary"></ion-icon>
+            <ion-label>Favoritos</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="chatboxes" color="primary"></ion-icon>
+            <ion-label>Fale conosco</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="settings" color="primary"></ion-icon>
+            <ion-label>Configurações</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+  </ion-grid>
+</ion-content>
