--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,14 @@
 
 /** Ionic CSS Variables **/
 :root {
+  /** japp **/
+  --ion-color-japp: #e01d25;
+  --ion-color-japp-rgb: 224,29,37;
+  --ion-color-japp-contrast: #ffffff;
+  --ion-color-japp-contrast-rgb: 255,255,255;
+  --ion-color-japp-shade: #c51a21;
+  --ion-color-japp-tint: #e3343b;
+
   /** primary **/
   --ion-color-primary: #e5053a;
   --ion-color-primary-rgb: 229,5,58;
