--- a/src/app/abertura/abertura.page.html
+++ b/src/app/abertura/abertura.page.html
@@ -8,6 +8,14 @@
   -->
 </ion-header>
 
-<ion-content color="primary">
-
+<ion-content color="japp">
+  <ion-grid>
+    <ion-row>
+      <ion-col></ion-col>
+      <ion-col>
+        <img src="../../assets/logo.png">
+      </ion-col>
+      <ion-col></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
