--- a/src/app/abertura/abertura.page.html
+++ b/src/app/abertura/abertura.page.html
@@ -8,14 +8,16 @@
   -->
 </ion-header>
 
-<ion-content color="japp">
-  <ion-grid>
+<ion-content scroll-y="false">
+  <ion-grid class="meio">
     <ion-row>
       <ion-col></ion-col>
-      <ion-col>
+      <ion-col size="8" align-self-center>
         <img src="../../assets/logo.png">
+        <ion-progress-bar type="indeterminate" color="japp"></ion-progress-bar>
       </ion-col>
       <ion-col></ion-col>
     </ion-row>
   </ion-grid>
+  
 </ion-content>
