--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
 <ion-content>
   <ion-item>
     <ion-label>Segunda, 10 de junho</ion-label>
-    <ion-badge slot="end" color="primary">Promoções do dia</ion-badge>
+    <ion-badge slot="end" color="japp">Promoções do dia</ion-badge>
   </ion-item>
   
   <ion-slides pager="true" [options]="slideOpts" class="slidesPromo">
@@ -35,7 +35,7 @@
   </ion-slides>
   <ion-list lines="none">
     <ion-list-header>
-      <ion-label color="primary">Destaques</ion-label>
+      <ion-label color="japp">Destaques</ion-label>
     </ion-list-header>
     <ion-item href="#" id="myBtn">
       <ion-label>Baguete</ion-label>
@@ -49,7 +49,7 @@
   </ion-list>
   <ion-list lines="none">
     <ion-list-header>
-      <ion-label color="primary">Salgados</ion-label>
+      <ion-label color="japp">Salgados</ion-label>
     </ion-list-header>
     <ion-item href="#">
       <ion-label class="listaItem">Coxinha</ion-label>
@@ -66,7 +66,7 @@
   </ion-list>
   <ion-list lines="none">
     <ion-list-header>
-      <ion-label color="primary">Doces</ion-label>
+      <ion-label color="japp">Doces</ion-label>
     </ion-list-header>
     <ion-item href="#">
       <ion-label class="listaItem">Pão doce</ion-label>
@@ -83,7 +83,7 @@
   </ion-list>
   <ion-list lines="none">
     <ion-list-header>
-      <ion-label color="primary">Café</ion-label>
+      <ion-label color="japp">Café</ion-label>
     </ion-list-header>
     <ion-item href="#">
       <ion-label class="listaItem">Café puro</ion-label>
@@ -100,7 +100,7 @@
   </ion-list>
   <ion-list lines="none">
     <ion-list-header>
-      <ion-label color="primary">Outros</ion-label>
+      <ion-label color="japp">Outros</ion-label>
     </ion-list-header>
     <ion-item href="#">
       <ion-label class="listaItem">Queijo</ion-label>
