--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -10,7 +10,7 @@
   color: #FFF;
   font-size: 14px;
   font-family:courier,arial,helvetica;
-  background-color: #e5053a;
+  background-color: #e01d25;
   padding: 5px;
   border-radius: 17px;
 }
@@ -21,7 +21,7 @@
   color: #FFF;
   font-size: 17px;
   font-family:courier,arial,helvetica;
-  background-color: #e5053a;
+  background-color: #e01d25;
   padding: 5px;
   border-radius: 17px;
 }
