--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,12 +21,12 @@
               <ion-label>
                 Pão francês
               </ion-label>
-              <ion-label color="primary">
+              <ion-label color="japp">
                 6x  R$ 0,25
               </ion-label>
             </ion-item>
             <ion-item-options>
-              <ion-item-option color="primary">
+              <ion-item-option color="japp">
                 Remover
               </ion-item-option>
             </ion-item-options>
@@ -39,12 +39,12 @@
               <ion-label>
                 Baguete
               </ion-label>
-              <ion-label color="primary">
+              <ion-label color="japp">
                 2x  R$ 2,50
               </ion-label>
             </ion-item>
             <ion-item-options>
-              <ion-item-option color="primary">
+              <ion-item-option color="japp">
                 Remover
               </ion-item-option>
             </ion-item-options>
@@ -69,7 +69,7 @@
             <ion-radio slot="end" value="dinheiro"></ion-radio>
           </ion-item>
         </ion-radio-group>
-        <ion-button color="primary" class="btnCarrinho">Confirmar pedido</ion-button>
+        <ion-button color="japp" class="btnCarrinho">Confirmar pedido</ion-button>
       </ion-card-content>
     </ion-card>
 
