--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,7 +14,7 @@
             <ion-label>Pedidos</ion-label>
           </ion-list-header> 
           <ion-item>
-              <ion-label color="primary">
+              <ion-label color="japp">
                 Segunda-feira 10/
               </ion-label>
           </ion-item>
