--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -35,23 +35,23 @@
       <ion-card-content>
         <ion-list lines="none">
           <ion-item>
-            <ion-icon name="notifications" color="primary"></ion-icon>
+            <ion-icon name="notifications" color="japp"></ion-icon>
             <ion-label>Notificações</ion-label>
           </ion-item>
           <ion-item>
-            <ion-icon name="cash" color="primary"></ion-icon>
+            <ion-icon name="cash" color="japp"></ion-icon>
             <ion-label>Formas de pagamento</ion-label>
           </ion-item>
           <ion-item>
-            <ion-icon name="heart" color="primary"></ion-icon>
+            <ion-icon name="heart" color="japp"></ion-icon>
             <ion-label>Favoritos</ion-label>
           </ion-item>
           <ion-item>
-            <ion-icon name="chatboxes" color="primary"></ion-icon>
-            <ion-label>Fale conosco</ion-label>
+            <ion-icon name="car" color="japp"></ion-icon>
+            <ion-label>Endereço</ion-label>
           </ion-item>
           <ion-item>
-            <ion-icon name="settings" color="primary"></ion-icon>
+            <ion-icon name="settings" color="japp"></ion-icon>
             <ion-label>Configurações</ion-label>
           </ion-item>
         </ion-list>
