--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -1,6 +1,6 @@
 .tamanho {
     width: 200px;
     height: 200px;
-    border: 5px solid #e5053a;
+    border: 5px solid #e01d25;
     opacity: 0.95;
 }
