--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,7 +52,7 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #FFF;
+  --ion-color-dark: #ffffff;
   --ion-color-dark-rgb: 229,5,58;
   --ion-color-dark-contrast: #e01d25;
   --ion-color-dark-contrast-rgb: 229,5,58;
