--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,76 +1,167 @@
 <ion-header>
+  <!--
     <ion-toolbar>
       <ion-title>
         Meu carrinho
       </ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content>
-    <ion-card>
-      <ion-card-content>
-        <ion-list lines="none">
-          <ion-list-header>
-            <ion-label>Carrinho</ion-label>
-          </ion-list-header> 
-          <ion-item-sliding>
-            <ion-item>
-              <ion-thumbnail slot="start">
-                <img src="https://i.imgur.com/6IFtRpb.png">
-              </ion-thumbnail>
-              <ion-label>
-                Pão francês
-              </ion-label>
-              <ion-label color="japp">
-                6x  R$ 0,25
-              </ion-label>
-            </ion-item>
-            <ion-item-options>
-              <ion-item-option color="japp">
-                Remover
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-          <ion-item-sliding>
-            <ion-item>
-              <ion-thumbnail slot="start">
-                <img src="https://i.imgur.com/7WCq58c.png">
-              </ion-thumbnail>
-              <ion-label>
-                Baguete
-              </ion-label>
-              <ion-label color="japp">
-                2x  R$ 2,50
-              </ion-label>
-            </ion-item>
-            <ion-item-options>
-              <ion-item-option color="japp">
-                Remover
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-          <ion-label class="totalCarrinho">
-            Total: R$ 6,50
-          </ion-label>
-        </ion-list>
-        <ion-radio-group>
-          <ion-list-header>
-            <ion-label>Forma de pagamento</ion-label>
-          </ion-list-header> 
-          <ion-item class="produtoCarrinho">
-            <ion-icon name="card" color="secondary"></ion-icon>
-            <ion-label >Cartão Visa final 1017</ion-label>
-            <ion-radio slot="end" value="cartao"></ion-radio>
-          </ion-item>
-      
-          <ion-item class="produtoCarrinho">
-            <ion-icon name="cash" color="success"></ion-icon>
-            <ion-label>Dinheiro</ion-label>
-            <ion-radio slot="end" value="dinheiro"></ion-radio>
-          </ion-item>
-        </ion-radio-group>
-        <ion-button color="japp" class="btnCarrinho">Confirmar pedido</ion-button>
-      </ion-card-content>
-    </ion-card>
+  -->
+</ion-header>
 
-  </ion-content>
+<ion-content>
+  <!-- Itens do carrinho -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Carrinho</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content no-padding>
+      <ion-list lines="none">
+
+        <!-- Item 1 - Pão francês -->
+        <ion-item-sliding>
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img src="https://i.imgur.com/6IFtRpb.png">
+            </ion-thumbnail>
+            <ion-label>
+              Pão francês
+            </ion-label>
+            <ion-label color="japp">
+              6x  R$ 0,25
+            </ion-label>
+          </ion-item>
+          <ion-item-options>
+            <ion-item-option color="japp">
+              Remover
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+
+        <!-- Item 2 - Baguete -->
+        <ion-item-sliding>
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img src="https://i.imgur.com/7WCq58c.png">
+            </ion-thumbnail>
+            <ion-label>
+              Baguete
+            </ion-label>
+            <ion-label color="japp">
+              2x  R$ 2,50
+            </ion-label>
+          </ion-item>
+          <ion-item-options>
+            <ion-item-option color="japp">
+              Remover
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+
+        <!-- Preço Total -->
+        <ion-label class="totalCarrinho">
+          Total: R$ 6,50
+        </ion-label>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Data de entrega -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Entrega</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content no-padding>
+      <ion-grid>
+
+        <!-- Data -->
+        <ion-row>
+          <ion-item lines="none">
+            <ion-col size="2">
+              <ion-icon name="calendar" class="data iconCarrinho"></ion-icon>
+            </ion-col>
+            <ion-col size="3">
+              <ion-label>Data</ion-label>
+            </ion-col>
+            <ion-col size="10">
+              <ion-datetime doneText="Confirmar" cancelText="Cancelar" class="entregaData" displayFormat="DD de MMM, YYYY" value="2019-06-17T13:47:20.789"></ion-datetime>
+            </ion-col>
+          </ion-item>
+        </ion-row>
+
+        <!-- Horário -->
+        <ion-row>
+          <ion-item lines="none">
+            <ion-col size="2">
+              <ion-icon name="clock" class="horario iconCarrinho"></ion-icon>
+            </ion-col>
+            <ion-col size="4">
+              <ion-label>Horário</ion-label>
+            </ion-col>
+            <ion-col size="6">
+              <ion-datetime doneText="Confirmar" cancelText="Cancelar" class="entregaHorario" displayFormat="HH:MM" value="2019-06-17T19:15:20.789"></ion-datetime>
+            </ion-col>
+          </ion-item>
+        </ion-row>
+
+        <!-- Endereço -->
+        <ion-row>
+          <ion-item lines="none">
+            <ion-col size="0">
+              <ion-icon name="pin" class="endereco iconCarrinho"></ion-icon>
+            </ion-col>
+            <ion-col size="12">
+              <ion-select class="entregaEndereco" okText="Confirmar" cancelText="Cancelar">
+                <ion-select-option value="principal" selected>Av. Eduardo Dias Coelho, 798</ion-select-option>
+                <ion-select-option value="addOutro">Adicionar outro</ion-select-option>
+              </ion-select>
+            </ion-col>
+          </ion-item>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Forma de pagamento -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Pagamento</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content no-padding>
+      <ion-radio-group>
+        <ion-grid>
+          <!-- Cartão de crédito -->
+          <ion-row>
+            <ion-item class="produtoCarrinho" lines="none">
+              <ion-col size="2">
+                <ion-icon class="iconCarrinho" name="card" color="secondary"></ion-icon>
+              </ion-col>
+              <ion-col size="8">
+                <ion-label class="pagCartao">Cartão Visa final 1017</ion-label>
+              </ion-col>
+              <ion-col size="2">
+                <ion-radio value="cartao" class="radioCarrinho" checked></ion-radio>
+              </ion-col>
+            </ion-item>
+          </ion-row>
+
+          <!-- Dinheiro -->
+          <ion-row>
+            <ion-item class="produtoCarrinho" lines="none">
+              <ion-col size="2">
+                <ion-icon class="iconCarrinho" name="cash" color="success"></ion-icon>
+              </ion-col>
+              <ion-col size="8">
+                <ion-label class="pagDinheiro">Dinheiro</ion-label>
+              </ion-col>
+              <ion-col size="2">
+                <ion-radio value="dinheiro" class="radioCarrinho"></ion-radio>
+              </ion-col>
+            </ion-item>
+          </ion-row>
+        </ion-grid>
+      </ion-radio-group>
+    </ion-card-content>
+  </ion-card>
+  <!-- Confirmar pedido -->
+  <ion-button color="japp">Confirmar pedido</ion-button>
+</ion-content>
