--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,38 +14,32 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col align-self-center>
-        <ion-icon name="ios-person" class="iconeLogin"></ion-icon>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item color="japp">
-          <ion-label position="floating">Usuário</ion-label>
+      <ion-col size="12">
+        <ion-item color="japp" class="inputLogin">
+          <ion-icon name="ios-person" position="fixed" class="iconeLogin"></ion-icon>
           <ion-input type="text" required></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col align-self-center>
-        <ion-icon name="ios-lock" class="iconeLogin"></ion-icon>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item color="japp">
-          <ion-label position="floating">Senha</ion-label>
-          <ion-input type="password" required></ion-input>
+      <ion-col size="12">
+        <ion-item color="japp" class="inputLogin">
+          <ion-icon name="ios-lock" position="fixed" class="iconeLogin"></ion-icon>
+          <ion-input inputmode="password" type="password" required></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="5">
-          <ion-button color="japp" class="btnReg">Registrar</ion-button>
+        <ion-button color="japp" class="btnReg" (click)="navigateToReg()">Registrar</ion-button>
       </ion-col>
       <ion-col size="2" align-self-center>
-          <ion-text color="light">
-            - OU -
-          </ion-text>
+        <ion-text color="light">
+          - OU -
+        </ion-text>
       </ion-col>
       <ion-col size="5">
-          <ion-button color="light" class="btnEntrar" (click)="navigateToInicio()">Entrar</ion-button>
+        <ion-button color="light" class="btnEntrar" (click)="navigateToInicio()">Entrar</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
