--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,16 +1,19 @@
 .iconeLogin {
-    font-size: 30px;
-    margin-left: 20px;
-    margin-top: 15px;
+    margin-right: 10px;
 }
 .btnReg {
     width: 140px;
-    border: 1px solid white;
-    border-radius: 3px;
+    border: 2px solid white;
+    border-radius: 2px;
 }
 .btnEntrar{
     width: 140px;
     background-color: white;
     border: 1px solid white;
     border-radius: 3px;
+}
+.inputLogin {
+    font-size: 18px;
+    border: 2px solid white;
+    border-radius: 2px;
 }
