--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
 
 <ion-content>
   <ion-item>
-    <ion-label>Segunda, 10 de junho</ion-label>
+    <ion-label>Segunda, 17 de junho</ion-label>
     <ion-badge slot="end" color="japp">Promoções do dia</ion-badge>
   </ion-item>
   
@@ -37,13 +37,13 @@
     <ion-list-header>
       <ion-label color="japp">Destaques</ion-label>
     </ion-list-header>
-    <ion-item href="#" id="myBtn">
+    <ion-item (click)="abrirModal()" id="myBtn">
       <ion-label>Baguete</ion-label>
     </ion-item>
-    <ion-item href="#">
+    <ion-item (click)="abrirModal2()">
       <ion-label>Pão francês</ion-label>
     </ion-item>
-    <ion-item href="#">
+    <ion-item>
       <ion-label>Pão de queijo</ion-label>
     </ion-item>
   </ion-list>
@@ -111,7 +111,7 @@
     <ion-item href="#">
       <ion-label class="listaItem">Leite desnatado</ion-label>
     </ion-item>
-    <ion-item href="#" class="maisItens">
+    <ion-item (click)="navigateToLogin()" class="maisItens">
       <ion-label color="tertiary">Ver mais</ion-label>
     </ion-item>
   </ion-list>
