--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -38,24 +38,26 @@
         </ion-item-sliding>
 
         <!-- Item 2 - Baguete -->
-        <ion-item-sliding>
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img src="https://i.imgur.com/7WCq58c.png">
-            </ion-thumbnail>
-            <ion-label>
-              Baguete
-            </ion-label>
-            <ion-label color="japp">
-              2x  R$ 2,50
-            </ion-label>
-          </ion-item>
-          <ion-item-options>
-            <ion-item-option color="japp">
-              Remover
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
+        <div>
+          <ion-item-sliding>
+            <ion-item>
+              <ion-thumbnail slot="start">
+                <img src="https://i.imgur.com/7WCq58c.png">
+              </ion-thumbnail>
+              <ion-label>
+                Baguete
+              </ion-label>
+              <ion-label color="japp">
+                2x  R$ 2,50
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <ion-item-option color="japp">
+                Remover
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        </div> 
 
         <!-- Preço Total -->
         <ion-label class="totalCarrinho">
@@ -163,5 +165,13 @@
     </ion-card-content>
   </ion-card>
   <!-- Confirmar pedido -->
-  <ion-button color="japp">Confirmar pedido</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+      </ion-col>
+      <ion-col>
+        <ion-button color="japp">Confirmar pedido</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
