--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -79,7 +79,7 @@
         <ion-row>
           <ion-item lines="none">
             <ion-col size="2">
-              <ion-icon name="calendar" class="data iconCarrinho"></ion-icon>
+              <ion-icon name="calendar" class="endereco iconCarrinho"></ion-icon>
             </ion-col>
             <ion-col size="3">
               <ion-label>Data</ion-label>
@@ -94,7 +94,7 @@
         <ion-row>
           <ion-item lines="none">
             <ion-col size="2">
-              <ion-icon name="clock" class="horario iconCarrinho"></ion-icon>
+              <ion-icon name="time" class="endereco iconCarrinho"></ion-icon>
             </ion-col>
             <ion-col size="4">
               <ion-label>Horário</ion-label>
@@ -138,7 +138,7 @@
                 <ion-icon class="iconCarrinho" name="card" color="secondary"></ion-icon>
               </ion-col>
               <ion-col size="8">
-                <ion-label class="pagCartao">Cartão Visa final 1017</ion-label>
+                <ion-label class="pagCartao">Cartão de crédito</ion-label>
               </ion-col>
               <ion-col size="2">
                 <ion-radio value="cartao" class="radioCarrinho" checked></ion-radio>
@@ -150,7 +150,7 @@
           <ion-row>
             <ion-item class="produtoCarrinho" lines="none">
               <ion-col size="2">
-                <ion-icon class="iconCarrinho" name="cash" color="success"></ion-icon>
+                <ion-icon class="iconCarrinho" name="cash" color="secondary"></ion-icon>
               </ion-col>
               <ion-col size="8">
                 <ion-label class="pagDinheiro">Dinheiro</ion-label>
